Deployment strategies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: blue-app
  ports:
  - name: http
    port: 80
    targetPort: 80
